tasm/src/grammer/parser.rs
use super::ast::{Asm, BinaryOp, Def, Expr, Ident, Stmt, Type, UnaryOp, AST};
use super::parsercore::Parser;
use super::token::{Pos, Token, TokenKind::*};
use crate::error::Error;
use crate::{check, expect, optional, repeat};

impl<I: Iterator<Item = Token>> Parser<I> {
    pub fn parse(mut self) -> (AST, Vec<Error>) {
        let program = self.parse_program();
        return (program, self.geterrors());
    }
}

impl<I: Iterator<Item = Token>> Parser<I> {
    fn parse_program(&mut self) -> AST {
        let mut defs = Vec::new();
        while self.peek().is_some() {
            match self.parse_def() {
                Ok(def) => {
                    defs.push(def);
                }
                Err(err) => {
                    self.error(err);
                    self.consume_until(|token| {
                        matches!(&token.kind, KwType | KwConst | KwStatic | KwAsm | KwFunc)
                    });
                }
            }
        }
        AST(defs)
    }

    /// type = "int" | "void" | ident | "*" type | "[" expr "]" type | "{" fields "}" | "(" fields ")" "->" type
    fn parse_type(&mut self) -> Result<Type, Error> {
        if let Some(token) = self.peek() {
            match token.kind {
                // Integer type: "int"
                KwInt => {
                    expect!(self, KwInt)?;
                    Ok(Type::Int)
                }

                // Void type: "void"
                KwVoid => {
                    expect!(self, KwVoid)?;
                    Ok(Type::Void)
                }

                // Custom type: qualified-ident
                Ident(_) => {
                    let name = self.parse_qualified_ident()?;
                    Ok(Type::Custom(name))
                }

                // Pointer type: "*" type
                Star => {
                    expect!(self, Star)?;
                    let ty = self.parse_type()?;
                    Ok(Type::Addr(Box::new(ty)))
                }

                // Array type: "[" expr "]" type
                LBracket => {
                    expect!(self, LBracket)?;
                    let expr = self.parse_expr()?;
                    expect!(self, RBracket)?;
                    let elem_type = self.parse_type()?;
                    Ok(Type::Array(expr, Box::new(elem_type)))
                }

                // Struct type: "{" [ ident ":" type { "," ident ":" type } ] "}"
                LCurly => {
                    expect!(self, LCurly)?;
                    let fields = repeat!(self, self.parse_field_type(), Comma, RCurly);
                    expect!(self, RCurly)?;
                    Ok(Type::Struct(fields))
                }

                // Function type: "(" [ ident ":" type { "," ident ":" type } ] ")" "->" type
                LParen => {
                    expect!(self, LParen)?;
                    let args = repeat!(self, self.parse_field_type(), Comma, RParen);
                    expect!(self, RParen)?;
                    expect!(self, Arrow)?;
                    let ret = self.parse_type()?;
                    Ok(Type::Func(args, Box::new(ret)))
                }

                _ => Err(Error::UnexpectedToken(token.pos.clone(), token.clone())),
            }
        } else {
            Err(Error::UnexpectedEOF(Pos::default()))
        }
    }

    /// def = type-def | const-def | static-def | asm-def | func-def
    fn parse_def(&mut self) -> Result<Def, Error> {
        if let Some(token) = self.peek() {
            let _pos = token.pos.clone();
            match token.kind {
                // type-def = "type" ident "=" type ";"
                KwType => {
                    expect!(self, KwType)?;
                    let name = self.parse_ident()?;
                    expect!(self, Equal)?;
                    let typ = self.parse_type()?;
                    expect!(self, Semicolon)?;
                    Ok(Def::Type(name, typ))
                }

                // const-def = "const" [ "@" expr ] ident "=" expr ";"
                KwConst => {
                    expect!(self, KwConst)?;
                    let addr = optional!(self, Atmark, self.parse_expr()?);
                    let name = self.parse_ident()?;
                    expect!(self, Equal)?;
                    let expr = self.parse_expr()?;
                    expect!(self, Semicolon)?;
                    Ok(Def::Const(name, addr, expr))
                }

                // static-def = "static" [ "@" expr ] ident ":" type ";"
                KwStatic => {
                    expect!(self, KwStatic)?;
                    let addr = optional!(self, Atmark, self.parse_expr()?);
                    let name = self.parse_ident()?;
                    expect!(self, Colon)?;
                    let ty = self.parse_type()?;
                    expect!(self, Semicolon)?;
                    Ok(Def::Static(name, addr, ty))
                }

                // asm-def = "asm" [ "@" expr ] ident "{" { asm-stmt } "}"
                KwAsm => {
                    expect!(self, KwAsm)?;
                    let addr = optional!(self, Atmark, self.parse_expr()?);
                    let name = self.parse_ident()?;
                    expect!(self, LCurly)?;
                    let body = repeat!(self, self.parse_asm_stmt(), RCurly);
                    expect!(self, RCurly)?;
                    Ok(Def::Asm(name, addr, body))
                }

                // func-def = "fn" ident "(" fields ")" [ "->" type ] block
                KwFunc => {
                    expect!(self, KwFunc)?;
                    let name = self.parse_ident()?;
                    expect!(self, LParen)?;
                    let args = repeat!(self, self.parse_field_type(), Comma, RParen);
                    expect!(self, RParen)?;
                    let ret = optional!(self, Arrow, self.parse_type()?).unwrap_or(Type::Void);
                    expect!(self, LCurly)?;
                    let stmts = repeat!(self, self.parse_stmt(), RCurly);
                    expect!(self, RCurly)?;
                    Ok(Def::Func(name, args, ret, stmts))
                }
                _ => Err(Error::UnexpectedToken(token.pos.clone(), token.clone())),
            }
        } else {
            Err(Error::UnexpectedEOF(Pos::default()))
        }
    }

    /// asm-stmt = { ident ":" } ident "(" [ expr { "," expr } ] ")" ";"
    fn parse_asm_stmt(&mut self) -> Result<Asm, Error> {
        let mut labels: Vec<Ident> = Vec::new();

        // Parse labels (ident ":")
        while let Some(token) = self.peek() {
            if let Ident(s) = &token.kind {
                let ident = s.clone();
                let pos = token.pos.clone();
                self.next();

                if check!(self, Colon) {
                    expect!(self, Colon)?;
                    labels.push((ident, pos));
                } else {
                    // This is the instruction name
                    expect!(self, LParen)?;
                    let args = repeat!(self, self.parse_expr(), Comma, RParen);
                    expect!(self, RParen)?;
                    expect!(self, Semicolon)?;
                    return Ok(Asm((ident, pos.clone()), args, labels, pos));
                }
            } else {
                break;
            }
        }

        Err(Error::UnexpectedEOF(Pos::default()))
    }

    /// stmt = block | var-stmt | if-stmt | while-stmt | return-stmt | assign-stmt | expr-stmt
    fn parse_stmt(&mut self) -> Result<Stmt, Error> {
        if let Some(token) = &self.peek() {
            match &token.kind {
                // Named scope block: "'" ident ":" "{" { stmt } "}"
                Scope(_) => {
                    let name = self
                        .parse_optional_scope()?
                        .expect("Scope token was peeked");
                    expect!(self, Colon)?;
                    expect!(self, LCurly)?;
                    let stmts = repeat!(self, self.parse_stmt(), RCurly);
                    expect!(self, RCurly)?;
                    return Ok(Stmt::Block(Some(name), stmts));
                }

                // Block statement: "{" { stmt } "}"
                LCurly => {
                    expect!(self, LCurly)?;
                    let stmts = repeat!(self, self.parse_stmt(), RCurly);
                    expect!(self, RCurly)?;
                    return Ok(Stmt::Block(None, stmts));
                }

                // Variable statement: "var" ident ":" type [ "=" expr ] ";"
                KwVar => {
                    expect!(self, KwVar)?;
                    let name = self.parse_ident()?;
                    expect!(self, Colon)?;
                    let ty = self.parse_type()?;
                    let init = optional!(self, Equal, self.parse_expr()?);
                    expect!(self, Semicolon)?;
                    return Ok(Stmt::Var(name, ty, init));
                }

                // Conditional statement: "if" "(" expr ")" stmt [ "else" stmt ]
                KwIf => {
                    expect!(self, KwIf)?;
                    expect!(self, LParen)?;
                    let cond = self.parse_expr()?;
                    expect!(self, RParen)?;
                    let tstmt = Box::new(self.parse_stmt()?);
                    let fstmt = optional!(self, KwElse, Box::new(self.parse_stmt()?));
                    return Ok(Stmt::Cond(cond, tstmt, fstmt));
                }

                // Loop statement: "while" "(" expr ")" stmt
                KwWhile => {
                    expect!(self, KwWhile)?;
                    expect!(self, LParen)?;
                    let cond = self.parse_expr()?;
                    expect!(self, RParen)?;
                    let body = Box::new(self.parse_stmt()?);
                    return Ok(Stmt::Loop(cond, body));
                }

                // Break statement: "break" "'" scope ";"
                KwBreak => {
                    let tok = expect!(self, KwBreak)?;
                    let scope = self
                        .parse_optional_scope()?
                        .ok_or_else(|| Error::ScopeRequired(tok.pos.clone(), "break".into()))?;
                    expect!(self, Semicolon)?;
                    return Ok(Stmt::Break(scope, tok.pos.clone()));
                }

                // Continue statement: "continue" "'" scope ";"
                KwContinue => {
                    let tok = expect!(self, KwContinue)?;
                    let scope = self
                        .parse_optional_scope()?
                        .ok_or_else(|| Error::ScopeRequired(tok.pos.clone(), "continue".into()))?;
                    expect!(self, Semicolon)?;
                    return Ok(Stmt::Continue(scope, tok.pos.clone()));
                }

                // Return statement: "return" [ expr ] ";"
                KwReturn => {
                    expect!(self, KwReturn)?;
                    let expr = if !check!(self, Semicolon) {
                        Some(self.parse_expr()?)
                    } else {
                        None
                    };
                    expect!(self, Semicolon)?;
                    return Ok(Stmt::Return(expr));
                }

                _ => {
                    // Expression-based statements
                    let expr = self.parse_expr()?;
                    if check!(self, Equal) {
                        // Assignment statement: expr "=" expr ";"
                        expect!(self, Equal)?;
                        let rhs = self.parse_expr()?;
                        expect!(self, Semicolon)?;
                        return Ok(Stmt::Assign(expr, rhs));
                    } else {
                        // Expression statement: expr ";"
                        expect!(self, Semicolon)?;
                        return Ok(Stmt::Expr(expr));
                    }
                }
            }
        }
        Err(Error::UnexpectedEOF(Pos::default()))
    }

    /// expr = or-expr
    fn parse_expr(&mut self) -> Result<Expr, Error> {
        self.parse_or_expr()
    }

    /// or-expr = xor-expr { "|" xor-expr }
    fn parse_or_expr(&mut self) -> Result<Expr, Error> {
        let mut lhs = self.parse_xor_expr()?;
        while check!(self, Pipe) {
            // Bitwise OR: expr "|" xor-expr
            expect!(self, Pipe)?;
            let rhs = self.parse_xor_expr()?;
            lhs = Expr::Binary(BinaryOp::Or, Box::new(lhs), Box::new(rhs))
        }
        Ok(lhs)
    }

    /// xor-expr = and-expr { "^" and-expr }
    fn parse_xor_expr(&mut self) -> Result<Expr, Error> {
        let mut lhs = self.parse_and_expr()?;
        while check!(self, Caret) {
            // Bitwise XOR: expr "^" and-expr
            expect!(self, Caret)?;
            let rhs = self.parse_and_expr()?;
            lhs = Expr::Binary(BinaryOp::Xor, Box::new(lhs), Box::new(rhs))
        }
        Ok(lhs)
    }

    /// and-expr = eq-expr { "&" eq-expr }
    fn parse_and_expr(&mut self) -> Result<Expr, Error> {
        let mut lhs = self.parse_eq_expr()?;
        while check!(self, Ampasand) {
            // Bitwise AND: expr "&" eq-expr
            expect!(self, Ampasand)?;
            let rhs = self.parse_eq_expr()?;
            lhs = Expr::Binary(BinaryOp::And, Box::new(lhs), Box::new(rhs))
        }
        Ok(lhs)
    }

    /// eq-expr = rel-expr { ( "==" | "!=" ) rel-expr }
    fn parse_eq_expr(&mut self) -> Result<Expr, Error> {
        let mut lhs = self.parse_rel_expr()?;
        loop {
            // Equality: expr "==" relat-expr
            if check!(self, EqualEqual) {
                expect!(self, EqualEqual)?;
                let rhs = self.parse_rel_expr()?;
                lhs = Expr::Binary(BinaryOp::Eq, Box::new(lhs), Box::new(rhs));
            }
            // Inequality: expr "!=" relat-expr
            else if check!(self, ExclEqual) {
                expect!(self, ExclEqual)?;
                let rhs = self.parse_rel_expr()?;
                lhs = Expr::Binary(BinaryOp::Ne, Box::new(lhs), Box::new(rhs));
            } else {
                break;
            }
        }
        Ok(lhs)
    }

    /// rel-expr = shift-expr [ ( "<" | "<=" | ">" | ">=" ) shift-expr ]
    fn parse_rel_expr(&mut self) -> Result<Expr, Error> {
        let lhs = self.parse_shift_expr()?;
        if let Some(token) = self.peek() {
            match token.kind {
                // Less than or equal: shift-expr "<=" shift-expr
                LAngleEqual => {
                    expect!(self, LAngleEqual)?;
                    let rhs = self.parse_shift_expr()?;
                    Ok(Expr::Binary(BinaryOp::Le, Box::new(lhs), Box::new(rhs)))
                }
                // Less than: shift-expr "<" shift-expr
                LAngle => {
                    expect!(self, LAngle)?;
                    let rhs = self.parse_shift_expr()?;
                    Ok(Expr::Binary(BinaryOp::Lt, Box::new(lhs), Box::new(rhs)))
                }
                // Greater than or equal: shift-expr ">=" shift-expr
                RAngleEqual => {
                    expect!(self, RAngleEqual)?;
                    let rhs = self.parse_shift_expr()?;
                    Ok(Expr::Binary(BinaryOp::Ge, Box::new(lhs), Box::new(rhs)))
                }
                // Greater than: shift-expr ">" shift-expr
                RAngle => {
                    expect!(self, RAngle)?;
                    let rhs = self.parse_shift_expr()?;
                    Ok(Expr::Binary(BinaryOp::Gt, Box::new(lhs), Box::new(rhs)))
                }
                _ => Ok(lhs),
            }
        } else {
            Err(Error::UnexpectedEOF(Pos::default()))
        }
    }

    /// shift-expr = add-expr [ ( "<<" | ">>" ) add-expr ]
    fn parse_shift_expr(&mut self) -> Result<Expr, Error> {
        let lhs = self.parse_add_expr()?;
        if let Some(token) = self.peek() {
            match token.kind {
                // Left shift: add-expr "<<" add-expr
                LAngleLAngle => {
                    expect!(self, LAngleLAngle)?;
                    let rhs = self.parse_add_expr()?;
                    Ok(Expr::Binary(BinaryOp::Shl, Box::new(lhs), Box::new(rhs)))
                }
                // Right shift: add-expr ">>" add-expr
                RAngleRAngle => {
                    expect!(self, RAngleRAngle)?;
                    let rhs = self.parse_add_expr()?;
                    Ok(Expr::Binary(BinaryOp::Shr, Box::new(lhs), Box::new(rhs)))
                }
                _ => Ok(lhs),
            }
        } else {
            Err(Error::UnexpectedEOF(Pos::default()))
        }
    }

    /// add-expr = mul-expr { ( "+" | "-" ) mul-expr }
    fn parse_add_expr(&mut self) -> Result<Expr, Error> {
        let mut lhs = self.parse_mul_expr()?;
        while let Some(token) = self.peek() {
            match token.kind {
                // Addition: expr "+" mul-expr
                Plus => {
                    expect!(self, Plus)?;
                    let rhs = self.parse_mul_expr()?;
                    lhs = Expr::Binary(BinaryOp::Add, Box::new(lhs), Box::new(rhs));
                }
                // Subtraction: expr "-" mul-expr
                Minus => {
                    expect!(self, Minus)?;
                    let rhs = self.parse_mul_expr()?;
                    lhs = Expr::Binary(BinaryOp::Sub, Box::new(lhs), Box::new(rhs));
                }
                _ => break,
            }
        }
        return Ok(lhs);
    }

    /// mul-expr = unary-expr [ ( "*" | "/" | "%" ) unary-expr ]
    fn parse_mul_expr(&mut self) -> Result<Expr, Error> {
        let lhs = self.parse_unary_expr()?;
        if let Some(token) = self.peek() {
            match token.kind {
                // Multiplication: unary-expr "*" unary-expr
                Star => {
                    expect!(self, Star)?;
                    let rhs = self.parse_unary_expr()?;
                    Ok(Expr::Binary(BinaryOp::Mul, Box::new(lhs), Box::new(rhs)))
                }
                // Division: unary-expr "/" unary-expr
                Slash => {
                    expect!(self, Slash)?;
                    let rhs = self.parse_unary_expr()?;
                    Ok(Expr::Binary(BinaryOp::Div, Box::new(lhs), Box::new(rhs)))
                }
                // Modulo: unary-expr "%" unary-expr
                Percent => {
                    expect!(self, Percent)?;
                    let rhs = self.parse_unary_expr()?;
                    Ok(Expr::Binary(BinaryOp::Mod, Box::new(lhs), Box::new(rhs)))
                }
                _ => Ok(lhs),
            }
        } else {
            Ok(lhs)
        }
    }

    /// unary-expr = ( "+" | "-" | "!" | "@" ) unary-expr | postfix-expr
    fn parse_unary_expr(&mut self) -> Result<Expr, Error> {
        if let Some(token) = self.peek() {
            match token.kind {
                // Unary plus: "+" unary-expr
                Plus => {
                    expect!(self, Plus)?;
                    let expr = self.parse_unary_expr()?;
                    return Ok(Expr::Unary(UnaryOp::Pos, Box::new(expr)));
                }
                // Unary minus: "-" unary-expr
                Minus => {
                    expect!(self, Minus)?;
                    let expr = self.parse_unary_expr()?;
                    return Ok(Expr::Unary(UnaryOp::Neg, Box::new(expr)));
                }
                // Logical not: "!" unary-expr
                Excl => {
                    expect!(self, Excl)?;
                    let expr = self.parse_unary_expr()?;
                    return Ok(Expr::Unary(UnaryOp::Not, Box::new(expr)));
                }
                // Dereference (prefix): "@" unary-expr
                Atmark => {
                    expect!(self, Atmark)?;
                    let expr = self.parse_unary_expr()?;
                    return Ok(Expr::Deref(Box::new(expr)));
                }
                _ => {}
            }
        }
        // Fall through to postfix-expr
        self.parse_postfix_expr()
    }

    /// postfix-expr = prim-expr { postfix-op }
    /// postfix-op = "(" [ expr { "," expr } ] ")" | "[" expr "]" | "." ident | "@" | "as" type
    fn parse_postfix_expr(&mut self) -> Result<Expr, Error> {
        let mut expr = self.parse_prim_expr()?;
        loop {
            // Function call: expr "(" [ expr { "," expr } ] ")"
            if check!(self, LParen) {
                expect!(self, LParen)?;
                let args = repeat!(self, self.parse_expr(), Comma, RParen);
                expect!(self, RParen)?;
                expr = Expr::Call(Box::new(expr), args);
                continue;
            }

            // Array indexing: expr "[" expr "]"
            if check!(self, LBracket) {
                expect!(self, LBracket)?;
                let index = self.parse_expr()?;
                expect!(self, RBracket)?;
                expr = Expr::Index(Box::new(expr), Box::new(index));
                continue;
            }

            // Member access: expr "." ident
            if check!(self, Period) {
                expect!(self, Period)?;
                let field = self.parse_ident()?;
                expr = Expr::Member(Box::new(expr), field);
                continue;
            }

            // Address-of (postfix): expr "@"
            if check!(self, Atmark) {
                expect!(self, Atmark)?;
                expr = Expr::Addr(Box::new(expr));
                continue;
            }

            // Type cast: expr "as" type
            if check!(self, KwAs) {
                expect!(self, KwAs)?;
                let target_type = self.parse_type()?;
                expr = Expr::Cast(Box::new(expr), Box::new(target_type));
                continue;
            }

            break;
        }
        Ok(expr)
    }

    /// prim-expr = "(" expr ")" | ident | num-lit | char-lit | string-lit | struct-lit | array-lit | sizeof-expr
    fn parse_prim_expr(&mut self) -> Result<Expr, Error> {
        if let Some(token) = self.peek() {
            match &token.kind {
                // Sizeof
                KwSizeof => {
                    let tok = expect!(self, KwSizeof)?;
                    if check!(self, LAngle) {
                        // Sizeof type: "sizeof" "<" type ">"
                        expect!(self, LAngle)?;
                        let ty = self.parse_type()?;
                        expect!(self, RAngle)?;
                        Ok(Expr::SizeofType(Box::new(ty), tok.pos))
                    } else {
                        // Sizeof expr: "sizeof" "<" expr ">"
                        expect!(self, LParen)?;
                        let expr = self.parse_expr()?;
                        expect!(self, RParen)?;
                        Ok(Expr::SizeofExpr(Box::new(expr), tok.pos))
                    }
                }

                // Inner: "(" expr ")"
                LParen => {
                    expect!(self, LParen)?;
                    let inner = self.parse_expr()?;
                    expect!(self, RParen)?;
                    Ok(inner)
                }

                // Identifier: qualified-ident
                Ident(_) => {
                    let name = self.parse_qualified_ident()?;
                    Ok(Expr::Ident(name))
                }

                // Number literal: num-lit
                Number(_, val) => {
                    let val = *val;
                    let tok = expect!(self, Number(_, _))?;
                    Ok(Expr::NumberLit(val, tok.pos))
                }

                // Character literal: char-lit
                Char(ch) => {
                    let ch = *ch;
                    let tok = expect!(self, Char(_))?;
                    Ok(Expr::CharLit(ch, tok.pos))
                }

                // Struct literal: "{" [ ident ":" expr { "," ident ":" expr } ] "}"
                LCurly => {
                    let tok = expect!(self, LCurly)?;
                    let fields = repeat!(self, self.parse_field_expr(), Comma, RCurly);
                    expect!(self, RCurly)?;
                    return Ok(Expr::StructLit(fields, tok.pos));
                }

                // Array literal: "[" [ expr { "," expr } ] "]"
                LBracket => {
                    let tok = expect!(self, LBracket)?;
                    let items = repeat!(self, self.parse_expr(), Comma, RBracket);
                    expect!(self, RBracket)?;
                    return Ok(Expr::ArrayLit(items, tok.pos));
                }

                // String literal: string-lit
                Text(s) => {
                    let s = s.clone();
                    let tok = expect!(self, Text(_))?;
                    return Ok(Expr::StringLit(s, tok.pos));
                }

                _ => Err(Error::UnexpectedToken(token.pos.clone(), token.clone())),
            }
        } else {
            Err(Error::UnexpectedEOF(Pos::default()))
        }
    }

    /// Optional scope reference: [ "'" ident ]
    fn parse_optional_scope(&mut self) -> Result<Option<Ident>, Error> {
        if let Some(token) = self.peek() {
            if let Scope(name) = &token.kind {
                let name = name.clone();
                let pos = token.pos.clone();
                self.next();
                return Ok(Some((name, pos)));
            }
        }
        Ok(None)
    }

    /// ident = ( "A".."Z" | "a".."z" | "_" ) { "0".."9" | "A".."Z" | "a".."z" | "_" }
    fn parse_ident(&mut self) -> Result<Ident, Error> {
        match self.next() {
            Some(Token {
                kind: Ident(s),
                pos,
            }) => Ok((s, pos)),
            Some(token) => Err(Error::UnexpectedToken(token.pos.clone(), token.clone())),
            None => Err(Error::UnexpectedEOF(Pos::default())),
        }
    }

    /// qualified-ident = ident { "::" ident }
    /// 参照名を "rtos::serial::print_char" のように `::` 連結した 1 つの Ident 文字列に
    /// する (定義名は単一 ident のまま)。Pos は先頭 ident のもの。
    /// 同一行で続く限り span を最終セグメントの終端まで拡張する。
    fn parse_qualified_ident(&mut self) -> Result<Ident, Error> {
        let (mut name, mut pos) = self.parse_ident()?;
        while check!(self, ColonColon) {
            expect!(self, ColonColon)?;
            let (seg, seg_pos) = self.parse_ident()?;
            name.push_str("::");
            name.push_str(&seg);
            if seg_pos.row() == pos.row() {
                pos = pos.with_end(seg_pos.end_col());
            }
        }
        Ok((name, pos))
    }

    /// ident ":" type
    fn parse_field_type(&mut self) -> Result<(Ident, Type), Error> {
        let name = self.parse_ident()?;
        expect!(self, Colon)?;
        let typ = self.parse_type()?;
        Ok((name, typ))
    }

    /// ident ":" expr
    fn parse_field_expr(&mut self) -> Result<(Ident, Expr), Error> {
        let name = self.parse_ident()?;
        expect!(self, Colon)?;
        let expr = self.parse_expr()?;
        Ok((name, expr))
    }
}

#[cfg(test)]
mod tests {
    use super::super::ast::{Def, Expr, Stmt};
    use super::super::lexer::Lexer;
    use super::super::parsercore::Parser;

    #[test]
    fn qualified_ident_span_covers_all_segments() {
        let code = "fn f() { rtos::serial::print_char(0); }";
        let tokens = Lexer::new("test.tasm", code).parse();
        let (ast, errors) = Parser::new(tokens.into_iter()).parse();
        assert!(errors.is_empty(), "{errors:?}");
        let Def::Func(_, _, _, stmts) = &ast.0[0] else {
            panic!("expected fn def");
        };
        let Stmt::Expr(Expr::Call(callee, _)) = &stmts[0] else {
            panic!("expected call stmt");
        };
        let Expr::Ident((name, pos)) = callee.as_ref() else {
            panic!("expected ident callee");
        };
        assert_eq!(name, "rtos::serial::print_char");
        // "rtos" は col 10 開始、"print_char" は col 24..34 → span は全体を覆う
        assert_eq!((pos.row(), pos.col()), (1, 10));
        assert_eq!(pos.end_col(), 34);
    }

    #[test]
    fn leaf_literals_have_pos() {
        let code = "const N = 42;";
        let tokens = Lexer::new("test.tasm", code).parse();
        let (ast, errors) = Parser::new(tokens.into_iter()).parse();
        assert!(errors.is_empty(), "{errors:?}");
        let Def::Const(_, _, expr) = &ast.0[0] else {
            panic!("expected const def");
        };
        let pos = expr.pos().expect("literal should carry pos");
        assert_eq!((pos.row(), pos.col(), pos.end_col()), (1, 11, 13));
    }
}
